[gd_scene load_steps=4 format=3 uid="uid://gswvw67aht7y"]

[ext_resource type="Texture2D" uid="uid://cpw5hae145sc4" path="res://assets/MENU/Menu_principal.png" id="1_b8jsp"]
[ext_resource type="Script" path="res://Scripts/menu_principal.gd" id="1_g0wmp"]
[ext_resource type="FontFile" uid="uid://dob7ob11ornpn" path="res://assets/fuente/SchoolBookNew-Regular.ttf" id="2_bpinj"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_g0wmp")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -35.0
offset_top = -33.0
offset_right = 1955.0
offset_bottom = 1117.0
texture = ExtResource("1_b8jsp")
expand_mode = 2

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 0
offset_left = 845.0
offset_top = 628.0
offset_right = 1067.0
offset_bottom = 728.0

[node name="Button" type="Button" parent="BoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_type_variation = &"FlatButton"
theme_override_colors/font_disabled_color = Color(0.317647, 0.172549, 0.00392157, 1)
theme_override_colors/font_hover_pressed_color = Color(0.317647, 0.172549, 0.00392157, 1)
theme_override_colors/font_hover_color = Color(0.423197, 0.236974, 0.00702146, 1)
theme_override_colors/font_pressed_color = Color(0.757829, 0.441566, 0.0274809, 1)
theme_override_colors/font_focus_color = Color(0.317647, 0.172549, 0.00392157, 1)
theme_override_colors/font_color = Color(0.217052, 0.111134, 0.00186453, 1)
theme_override_fonts/font = ExtResource("2_bpinj")
theme_override_font_sizes/font_size = 90
text = "Play"
flat = true

[node name="BoxContainer2" type="BoxContainer" parent="."]
layout_mode = 0
offset_left = 749.0
offset_top = 738.0
offset_right = 1177.0
offset_bottom = 838.0

[node name="Button" type="Button" parent="BoxContainer2"]
layout_mode = 2
size_flags_vertical = 0
theme_type_variation = &"FlatButton"
theme_override_colors/font_disabled_color = Color(0.317647, 0.172549, 0.00392157, 1)
theme_override_colors/font_hover_pressed_color = Color(0.317647, 0.172549, 0.00392157, 1)
theme_override_colors/font_hover_color = Color(0.423197, 0.236974, 0.00702146, 1)
theme_override_colors/font_pressed_color = Color(0.757829, 0.441566, 0.0274809, 1)
theme_override_colors/font_focus_color = Color(0.317647, 0.172549, 0.00392157, 1)
theme_override_colors/font_color = Color(0.217052, 0.111134, 0.00186453, 1)
theme_override_fonts/font = ExtResource("2_bpinj")
theme_override_font_sizes/font_size = 90
text = "Ranking"
flat = true

[node name="BoxContainer3" type="BoxContainer" parent="."]
layout_mode = 0
offset_left = 664.0
offset_top = 845.0
offset_right = 1263.0
offset_bottom = 945.0

[node name="Button" type="Button" parent="BoxContainer3"]
layout_mode = 2
size_flags_vertical = 0
theme_type_variation = &"FlatButton"
theme_override_colors/font_disabled_color = Color(0.317647, 0.172549, 0.00392157, 1)
theme_override_colors/font_hover_pressed_color = Color(0.317647, 0.172549, 0.00392157, 1)
theme_override_colors/font_hover_color = Color(0.423197, 0.236974, 0.00702146, 1)
theme_override_colors/font_pressed_color = Color(0.757829, 0.441566, 0.0274809, 1)
theme_override_colors/font_focus_color = Color(0.317647, 0.172549, 0.00392157, 1)
theme_override_colors/font_color = Color(0.217052, 0.111134, 0.00186453, 1)
theme_override_fonts/font = ExtResource("2_bpinj")
theme_override_font_sizes/font_size = 90
text = "Control keys"
flat = true

[node name="BoxContainer4" type="BoxContainer" parent="."]
layout_mode = 0
offset_left = 850.0
offset_top = 950.0
offset_right = 1059.0
offset_bottom = 1050.0

[node name="Button" type="Button" parent="BoxContainer4"]
layout_mode = 2
size_flags_vertical = 0
theme_type_variation = &"FlatButton"
theme_override_colors/font_disabled_color = Color(0.317647, 0.172549, 0.00392157, 1)
theme_override_colors/font_hover_pressed_color = Color(0.317647, 0.172549, 0.00392157, 1)
theme_override_colors/font_hover_color = Color(0.423197, 0.236974, 0.00702146, 1)
theme_override_colors/font_pressed_color = Color(0.757829, 0.441566, 0.0274809, 1)
theme_override_colors/font_focus_color = Color(0.317647, 0.172549, 0.00392157, 1)
theme_override_colors/font_color = Color(0.217052, 0.111134, 0.00186453, 1)
theme_override_fonts/font = ExtResource("2_bpinj")
theme_override_font_sizes/font_size = 90
text = "Exit"
flat = true
